# cmus-rpc

./: .gitignore  .todo  Cargo.toml  Makefile  README.md  cmus-rpc  cmus-rpc.py
.readme/: logo.kra  social_preview.kra
cmus-wrapper/: Cargo.toml
cmus-wrapper/src/: lib.rs
cmus-wrapper/src/query/: mod.rs
cmus-wrapper/src/status/: mod.rs
src/: app.rs  args.rs  cmus.rs  handle_instances.rs  main.rs  parser.rs  shell.rs
