[package]
name = "cmus-rpc"
version = "1.2.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
notify-rust = "4"
discord-rpc-client = "0.3.0"
cmus-wrapper = { path = "./cmus-wrapper" }
